[package]
name = "lalrpop-expression"
version = "0.1.0"
authors = ["Konstantin Grech <kgrech@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19.1"
regex = "1"

[dev-dependencies]
rstest = "0.6.4"