[package]
name = "lalrpop-expression"
version = "0.1.0"
authors = ["Konstantin Grech <kgrech@mail.ru>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19.1"
regex = "1"
wasm-bindgen = "0.2.63"

[dev-dependencies]
rstest = "0.6.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"